Create user thru API
